# habit-tracker

./: .coverage  .env sample  .flake8  .gitignore  pyproject.toml  pytest.ini
config/: settings.py  urls.py
fixtures/: habits_fixture.json
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits/templates/habits/: habit_list.html
templates/: base.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_customuser_telegram_chat_id.py
utils/: telegram.py  tests.py
