[tool.poetry]
name = "habit tracker"
version = "0.1.0"
description = ""
authors = ["Mayya Tokarskaya <mayya.tokarskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.1"
django-cors-headers = "^4.7.0"
celery = "^5.5.3"
redis = "^6.2.0"
drf-yasg = "^1.21.10"
psycopg = "^3.2.9"
psycopg2 = "^2.9.10"
django-celery-beat = "^2.8.1"
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
django-extensions = "^4.1"
coverage = "^7.10.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
